--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <anni><b>...</anni></b>
                         </div>
                         <div class="two">
-                            <img src="img/image2.jpg" class="avt">
+                            <img src="img/image3.jpg" class="avt">
                             <p>
                                 <div class="venus">
                                     <i class="fa fa-venus" aria-hidden="true" style="color: red; font-size: 20px;"></i></div>
@@ -53,8 +53,9 @@
                         <audio loop autoplay controls>Your browser does not support the audio element.</audio>
                 </div>
                 <footer><b>Thank you for your love 💕</footer></b>
-                    </center>
-            </div>
+                    <div id="about"><b>Code by<a style="text-decoration: none" href="https://www.facebook.com/profile.php?id=100022374431079" target="_blank"> Trương Ngọc Phú </div></b>
+                        </center>
+                    </div>
 
-            <script src="app.js"></script>
+                    <script src="app.js"></script>
 </body>
