--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <audio loop autoplay controls>Your browser does not support the audio element.</audio>
                 </div>
                 <footer><b>Thank you for your love 💕</footer></b>
-                    <div id="about"><b>Code by<a style="text-decoration: none" href="https://www.facebook.com/profile.php?id=100022374431079" target="_blank"> Trương Ngọc Phú </div></b>
+                    <div id="about">Code by<a style="text-decoration: none" href="https://www.facebook.com/profile.php?id=100022374431079" target="_blank" style="color:black"> Trương Ngọc Phú </div>
                         </center>
                     </div>
 
