--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <div id="wrapper">
         <h1><b>LOVE DAYS</h1></b>
-
+            <script>
+                alert('xem xong thì bấm vô trái tym nha!!!!!!! :y:y');
+            </script>
             <div id="clock-box">
                 <div id="clock">
                     <date>0 DAYS</date>
@@ -33,9 +35,12 @@
                             <br>
                             <a style="text-decoration: none" href="https://www.facebook.com/profile.php?id=100022374431079" target="_blank"><b>  Trương Ngọc Phú</b></p></a>
                         </div>
+
                         <div id="heart">
+                            <a style="text-decoration: none" href="./index1.html"> 
                             ❤
                             <!-- <pi><b>12-07-2022</pi></b> -->
+                            </a>
                             <anni><b>...</anni></b>
                         </div>
                         <div class="two">
