--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
                         </div>
 
                         <div id="heart">
-                            <a style="text-decoration: none" href="./index1.html"> 
+                            <center>
+                                <a id="heart" style="text-decoration-line: none;" href="./index1.html"> 
                             ❤
                             <!-- <pi><b>12-07-2022</pi></b> -->
                             </a>
+                            </center>
                             <anni><b>...</anni></b>
                         </div>
                         <div class="two">
