--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="wrapper">
         <h1><b>LOVE DAYS</h1></b>
             <script>
-                alert('xem xong thì bấm vô trái tym nha!!!!!!! :y:y');
+                alert('Xem xong thì bấm vô trái tym nha!! ❤ ❤ ❤ ❤');
             </script>
             <div id="clock-box">
                 <div id="clock">
