--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
                         <div id="heart">
                             <center>
-                                <a id="heart" style="text-decoration-line: none;" href="./index1.html"> 
-                            ❤
-                            <!-- <pi><b>12-07-2022</pi></b> -->
-                            </a>
+                                <!-- <a id="heart" style="text-decoration-line: none;" href="./index1.html">  -->
+                                ❤
+                                <!-- <pi><b>12-07-2022</pi></b> -->
+                                </a>
                             </center>
                             <anni><b>...</anni></b>
                         </div>
