--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <div id="wrapper">
         <h1><b>LOVE DAYS</h1></b>
-            <script>
+            <!-- <script>
                 alert('Xem xong thì bấm vô trái tym nha!! ❤ ❤ ❤ ❤');
-            </script>
+            </script> -->
             <div id="clock-box">
                 <div id="clock">
                     <date>0 DAYS</date>
